# gaia

./: .clang-format  .gitignore  CMakeLists.txt
src/: args.h  gaia_star.h  main.cpp
